added homepage logo

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -32,3 +32,32 @@
   .home__headerRight > .MuiSvgIcon-root {
     margin-right: 20px;
   }
+
+  .home__body{
+      flex: 1;
+      display: flex;
+      margin-top: 10%;
+      flex-direction: column;
+
+  }
+
+  .home__body > img {
+      object-fit: contain;
+      height: 100px;
+  }
+.home__inputContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 750px) {
+
+    .search {
+        max-width: 560px;
+    }
+.home__body > img {
+    object-fit: contain;
+    height: 70px;
+}
+
+}
